# uod-class-disparities

./: README.md
experimental-studies-DUO/classification_study/ResNet18/: rn18_balanced_data_model.py  rn18_reduced_class_model.py  rn18_weighted_sampling_model.py
experimental-studies-DUO/classification_study/VisionTransformer/: ViT_imbalanced_data_model.py  ViT_weighted_sampling_model.py
experimental-studies-DUO/classification_study/cls_datasets/: README.md
experimental-studies-DUO/localization_study/SSD/: .smbdeleteAAA20003a759014653  SSD_balanced.py  SSD_single_class.py
experimental-studies-DUO/localization_study/YOLO11/: YOLO11_balanced_train.py  YOLO11_reduced_test.py  YOLO11_single_test.py  YOLO11_single_train.py
experimental-studies-DUO/localization_study/loc_datasets/: README.md
experimental-studies-DUO/localization_study/loc_evaluation_scripts/: loc_bbox_metrics.py  loc_tide_errors.py
experimental-studies-RUOD-4C/classification_study/MobileNetV2/: mnv2_balanced_data_model.py  mnv2_imbalanced_data_model.py  mnv2_reduced_class_model.py  mnv2_weighted_sampling_model.py
experimental-studies-RUOD-4C/classification_study/ResNet18/: rn18_imbalanced_data_model.py
experimental-studies-RUOD-4C/classification_study/VisionTransformer/: ViT_balanced_data_model.py  ViT_reduced_class_model.py
pixi/: pixi.toml  pyproject.toml
pixi/src/uod_class_disparities.egg-info/: PKG-INFO  SOURCES.txt
pixi/src/yolo11_object_detection/: logging_helpers.py
pixi/src/yolo11_object_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+14 files in other folders)
